--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 	<script defer src="js/script.js"></script>
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>Error</title>
+	<title>Ошибка</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Cabin:400,700" rel="stylesheet">
