--- a/store.html
+++ b/store.html
@@ -15,18 +15,17 @@
 
 <meta property="og:title" content="Магазин — Игровой сервер" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://neko.su/store" />
-<meta property="og:image" content="https://cdn.discordapp.com/icons/525360269023641631/a_7c5d9ed0d2b75fc43149b48f1d09af97.gif" />
+<meta property="og:url" content="https://gamesserver.cf/store.html" />
+<meta property="og:image" content="!" />
 <meta name="theme-color" content="#1f2029">
 <meta property="og:description" content="Официальный Дискорд сервер для общения. Приятное комьюнити и хорошая атмосфера помогут тебе расслабиться." />
-<meta property="og:site_name" content="Neko.land" />
-<link type="application/json+oembed" rel="alternate" href="https://neko.su/assets/oembed.json" />
+<meta property="og:site_name" content="Игровой сервер" />
 
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="Магазин — Neko.land" />
+<meta name="twitter:title" content="Магазин — Игровой сервер" />
 <meta name="twitter:description" content="Официальный Дискорд сервер для общения. Приятное комьюнити и хорошая атмосфера помогут тебе расслабиться." />
-<meta property="twitter:url" content="https://neko.su/store" />
-<meta property="twitter:image" content="https://neko.su/assets/img/logo.png" />
+<meta property="twitter:url" content="https://gamesserver.cf/store.html" />
+<meta property="twitter:image" content="!" />
 
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -39,8 +38,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body>
 <div class="navbar" id="respNav">
-<a class="logo" href="index.html">Neko<span>.land</span></a>
-<a class="login" href="login/store.html" rel="nofollow noopener">Авторизация</a>
+<a class="logo" href="index.html">Игровой<span>сервер</span></a>
 <a href="https://discord.gg/nya" rel="nofollow noopener" target="_blank">Присоединиться</a>
 <a href="rules.html">Правила</a>
 <a href="store.html">Магазин</a>
