--- a/rules.html
+++ b/rules.html
@@ -58,48 +58,72 @@
                 </ul>
             </nav>
             <div class="neko_rules">
+                <h2>Примечания</h2>
+                <h3>1.1 Каждый пользователь который вступил в Discord сервер, автоматически соглашается с данным сводом правила сервера и платформы Discord</h3>
+                <h3>1.2 Администрация имеет право на редактирование данных правил в любое время суток.</h3>
+                <h3>1.3 Незнание правил не освобождает от ответственности.</h3>
+                <h3>1.4 Ни при каких условиях Администрация не обязана возвращать Вам утраченные вещи⁰, которые Вы приобрели за пожертвования или добыли во время пользовательского процесса. Обратите на это внимание!</h3>
                 <h2>Голосовые каналы</h2>
-                <h3>1.1 Оскорбление и провокации.
+                <h3>1.5 Оскорбление и провокации.
                     Наказание: предупреждение или мут на 120 минут.</p><span>Наказание: предупреждение или мут на 120
                         минут.</span>
-                    <h3>1.2 Использование программ для трансляции звуков через микрофон.</p><span>Наказание:
+                    <h3>1.6 Использование программ для трансляции звуков через микрофон.</p><span>Наказание:
                             предупреждение или мут на 60 минут.</span>
-                        <h3>1.3 Создание грубых помех общению.</p><span>Наказание: предупреждение или мут на 30 минут.
-                                <h2>Текстовые каналы</h2></span>
-                            <h3>1.4 Несоблюдение тематики чата. (Оффтоп)</p><span>Наказание: предупреждение или мут на
+                        <h3>1.7 Создание грубых помех общению.</p><span>Наказание: предупреждение или мут на 30 минут.
+                                <h2>Текстовые каналы</h2>
+                            </span>
+                            <h3>1.8 Несоблюдение тематики чата. (Оффтоп)</p><span>Наказание: предупреждение или мут на
                                     60 минут.</span>
-                                <h3>1.5 Флуд и спам.</p><span>Наказание: предупреждение или мут на 180 минут.</span>
-                                    <h3>1.6 Частое упоминание роли или участника и безпричиное упоминание.</p>
+                                <h3>1.9 Флуд и спам.</p><span>Наказание: предупреждение или мут на 180 минут.</span>
+                                    <h3>2.0 Частое упоминание роли или участника и безпричиное упоминание.</p>
                                         <span>Наказание: мут на 1 день.</span>
-                                        <h3>1.7 Провокации и оскорбление.</p><span>Наказание: предупреждение или мут на
+                                        <h3>2.1 Провокации и оскорбление.</p><span>Наказание: предупреждение или мут на
                                                 120 минут.<h2>Общие правила</h2></span>
-                                            <h3>1.8 Обман, целью получить себе выгоду.</p><span>Наказание:
+                                            <h3>2.2 Обман, целью получить себе выгоду.</p><span>Наказание:
                                                     предупреждение или бан</span>
-                                                <h3>1.9 Розжиг межнациональной розни.</p><span>Наказание: бан.</span>
-                                                    <h3>2.0 Распространение 18+ контента.</p><span>Наказание: бан или
+                                                <h3>2.3 Розжиг межнациональной розни.</p><span>Наказание: бан.</span>
+                                                    <h3>2.4 Распространение 18+ контента.</p><span>Наказание: бан или
                                                             мут на неделю</span>
-                                                        <h3>2.1 Распространение личной информации без согласии её
+                                                        <h3>2.5 Распространение личной информации без согласии её
                                                             владельца.</p><span>Наказание: предупреждение или мут на 180
                                                                 минут.</span>
-                                                            <h3>2.2 Реклама без согласия администрации , даже в личные
+                                                            <h3>2.6 Реклама без согласия администрации , даже в личные
                                                                 сообщения.</p><span>Наказание: бан</span>
-                                                                <h3>2.3 Совращение несовершеннолетних.</p>
+                                                                <h3>2.7 Совращение несовершеннолетних.</p>
                                                                     <span>Наказание: предупреждение или мут на 360
                                                                         минут.</span>
-                                                                    <h3>2.4 Совершение митинга против нескольких людей
+                                                                    <h3>2.8 Совершение митинга против нескольких людей
                                                                         или против одного человека.</p><span>Наказание:
                                                                             бан навсегда.</p> </span>
-                                                                        <h3>2.5 Запещены насмешки над людьми (Например
+                                                                        <h3>2.9 Запещены насмешки над людьми (Например
                                                                             ставля на аватарку Павла).</p>
                                                                             <span>Наказание: БАН.</span>
-                                                                            <h3>2.6 Запрещено перебивать собеседников в
+                                                                            <h3>3.0 Запрещено перебивать собеседников в
                                                                                 голосовых чатах.</p><span>Наказание:
                                                                                     Устное предупреждение, а при повторе
                                                                                     предупреждение.</span>
-                                                                                <h3>2.7 Запрещено нарушать правила после
+                                                                                <h3>3.1 Запрещено нарушать правила после
                                                                                     того как вас разбанил Павел (Любое
                                                                                     нарушение)</p><span>Наказание: Бан
-                                                                                        без возможности разбана.</p>
+                                                                                        без возможности разбана.</span>
+                                                                                        <p></p>
+                                                                                        <h2>Правила для модерации</h2>
+                                                                                        <p></p>
+                                                                                        <p><span style="color:rgb(255, 0, 0)">@× Administration</span> - администрация сервера.;</p>
+                                                                                        <p><span style="color:#eb2c2c">@× Curator</span> - контролирует роли ниже.;</p>
+                                                                                        <p><span style="color:#f33739">@× Moderator</span> - модерация сервера , следит за голосовыми и текстовыми каналами.;</p>
+                                                                                        <p><span style="color:#e05656">@× Support</span>  - встречает новичков, и отвечает на вопросы.</p>
+                                                                                        <p><span style="color:#e7777a">@× Stuff</span> начальная роль модерации.</span></p>
+                                                                                        <p></p>
+                                                                                        <h3>3.2 Модератор обязан быть общительным, грамотным, вежливым.</h3>
+                                                                                        <h3>3.3 Модераторам запрещено игнорировать Администрациию без веской на то причины, а также Модератор обязан предоставить ролям выше его по иерархии, доказательство за наказание пользователя при возникновении вопросов.</h3>
+                                                                                        <h3>3.4 Если модератора снимут с поста, то он не может больше претендовать на восстановление в должности в дальнейшем.</h3>
+                                                                                        <p>Администрация в праве сделать исключение этого правила, если нарушение было незначительным.</p>
+                                                                                        <h3>3.5 Модератор не может злоупотрелять своей должностью или использовать свои полномочия в пользу себя.</h3>
+                                                                                        <h3>При случае взлома аккаунта модератора, то вину несёт сам модератор.</h3>
+                                                                                        <h3>Модератору запрещено разглашать информацию, не предназначенную для пользователей.</h3>
+                                                                                        <p>Любая информация с конференций, групп или личных сообщений проекта, будущих нововведениях.</p>
+
             </div>
         </div>
     </div>
