--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <body>
   <div class="navbar" id="respNav"> <a class="logo" href="index.html">Игровой <span>сервер</span></a><a
-      href="https://discord.gg/JXQDKwMZYx" rel="nofollow noopener" target="_blank">Присоединиться</a> <a
+      href="https://discord.gg/pavel1031" rel="nofollow noopener" target="_blank">Присоединиться</a> <a
       href="rules.html">Правила</a><a class="icon" onclick="NavBar()">&#9776;</a></div>
   <div id="main">
     <div class="content">
@@ -56,10 +56,12 @@
       <div class="title_main">
         <h1>Игровой<a> сервер</a></h1> <span>Сервер для настоящих геймеров и тяночек , заходи мы тебя ждём)</span>
       </div>
-      <div class="title_btn"> <a href="https://discord.gg/JXQDKwMZYx
-  " rel="nofollow noopener" target="_blank">Присоединиться к серверу</a> <a
-          href="https://myservers.me/s/451300008088567808" target="_blank"
-          onClick="like(this); return false;">Проголосовать за сервер</a></div>
+      <div class="title_btn"> <a href="https://discord.gg/pavel1031" rel="nofollow noopener"
+        target="_blank">Присоединиться к серверу</a> <a
+        href="https://myservers.me/s/451300008088567808" target="_blank"
+        onClick="like(this); return false;">Проголосовать за сервер</a> <a
+        href="https://pavel1031.cf/" target="_blank"
+        onClick="like(this); return false;">Кто такой Павел?</a> </div>
     </div>
   </div>
   <footer class="footer">
