--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   <div id="main">
     <div class="content">
       <div class="main_baner">
-        <div class="neko_background_left layer" data-speed="2"></div>
-        <div class="neko_background_right layer" data-speed="2"></div>
+        <div class="!" data-speed="2"></div>
+        <div class="!" data-speed="2"></div>
       </div>
       <div class="title_main">
         <h1>Игровой<a> сервер</a></h1> <span>Сервер для настоящих геймеров и тяночек , заходи мы тебя ждём)</span>
