--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
         target="_blank">Присоединиться к серверу</a> <a
         href="https://myservers.me/s/451300008088567808" target="_blank"
         onClick="like(this); return false;">Проголосовать за сервер</a> <a
-        href="https://pavel1031.cf/" target="_blank"
-        onClick="like(this); return false;">Кто такой Павел?</a> </div>
+        href="pavel.html">Кто такой Павел?</a> </div>
     </div>
   </div>
   <footer class="footer">
