--- a/pavel.html
+++ b/pavel.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Правила Сервера — Игровой сервер</title>
+    <title>Павел Александрович</title>
     <link rel="canonical" href="pavel.html">
     <meta name="keywords"
         content="дискорд сервер, дискорд, павел, крумка, крутой сервер, сервер с играми , сервер для общения, игры">
@@ -16,7 +16,7 @@
         href="https://cdn.discordapp.com/attachments/957919700271116288/977256248053469204/discord-avatar-128-RSUVT.gif" />
     <meta property="og:title" content="Правила Сервера — Игровой сервер" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gamesserver.cf/rules.html" />
+    <meta property="og:url" content="https://gamesserver.cf/pavel.html" />
     <meta property="og:image"
         content="https://cdn.discordapp.com/attachments/957919700271116288/977256248053469204/discord-avatar-128-RSUVT.gif" />
     <meta name="theme-color" content="#1f2029">
