--- a/rules.html
+++ b/rules.html
@@ -110,6 +110,7 @@
                                                                                         <h2>Правила для модерации</h2>
                                                                                         <p></p>
                                                                                         <p><span style="color:rgb(255, 0, 0)">@× Administration</span> - администрация сервера.;</p>
+                                                                                        <p><span style="color:#e510f1">@× Сontrol</span> - контролирует полностью все роли ниже.;</p>
                                                                                         <p><span style="color:#eb2c2c">@× Curator</span> - контролирует роли ниже.;</p>
                                                                                         <p><span style="color:#f33739">@× Moderator</span> - модерация сервера , следит за голосовыми и текстовыми каналами.;</p>
                                                                                         <p><span style="color:#e05656">@× Support</span>  - встречает новичков, и отвечает на вопросы.</p>
@@ -120,9 +121,10 @@
                                                                                         <h3>3.4 Если модератора снимут с поста, то он не может больше претендовать на восстановление в должности в дальнейшем.</h3>
                                                                                         <p>Администрация в праве сделать исключение этого правила, если нарушение было незначительным.</p>
                                                                                         <h3>3.5 Модератор не может злоупотрелять своей должностью или использовать свои полномочия в пользу себя.</h3>
-                                                                                        <h3>При случае взлома аккаунта модератора, то вину несёт сам модератор.</h3>
-                                                                                        <h3>Модератору запрещено разглашать информацию, не предназначенную для пользователей.</h3>
+                                                                                        <h3>3.6 При случае взлома аккаунта модератора, то вину несёт сам модератор.</h3>
+                                                                                        <h3>3.7 Модератору запрещено разглашать информацию, не предназначенную для пользователей.</h3>
                                                                                         <p>Любая информация с конференций, групп или личных сообщений проекта, будущих нововведениях.</p>
+                                                                                        <h3>3.8 Стажёру запрещено накручивать инвайты.</h3>
 
             </div>
         </div>
