--- a/rules.html
+++ b/rules.html
@@ -112,6 +112,7 @@
                                                                                         <p><span style="color:rgb(255, 0, 0)">@× Administration</span> - администрация сервера.;</p>
                                                                                         <p><span style="color:#e510f1">@× Сontrol</span> - контролирует полностью все роли ниже.;</p>
                                                                                         <p><span style="color:#eb2c2c">@× Curator</span> - контролирует роли ниже.;</p>
+                                                                                        <p><span style="color:#b82628">@× Main Moderator</span> - модерация которая учит младшую модерацию.;</p>
                                                                                         <p><span style="color:#f33739">@× Moderator</span> - модерация сервера , следит за голосовыми и текстовыми каналами.;</p>
                                                                                         <p><span style="color:#e05656">@× Support</span>  - встречает новичков, и отвечает на вопросы.</p>
                                                                                         <p><span style="color:#e7777a">@× Stuff</span> начальная роль модерации.</span></p>
