--- a/rules.html
+++ b/rules.html
@@ -109,13 +109,13 @@
                                                                                         <p></p>
                                                                                         <h2>Правила для модерации</h2>
                                                                                         <p></p>
-                                                                                        <p><span style="color:rgb(255, 0, 0)">@× Administration</span> - администрация сервера.;</p>
-                                                                                        <p><span style="color:#e510f1">@× Сontrol</span> - контролирует полностью все роли ниже.;</p>
-                                                                                        <p><span style="color:#eb2c2c">@× Curator</span> - контролирует роли ниже.;</p>
+                                                                                        <p><span style="color:#691c1c">@× Administration</span> - администрация сервера.;</p>
+                                                                                        <p><span style="color:#8a2424">@× Сontrol</span> - контролирует полностью все роли ниже.;</p>
+                                                                                        <p><span style="color:#b32d2e">@× Curator</span> - контролирует роли ниже.;</p>
                                                                                         <p><span style="color:#b82628">@× Main Moderator</span> - модерация которая учит младшую модерацию.;</p>
-                                                                                        <p><span style="color:#f33739">@× Moderator</span> - модерация сервера , следит за голосовыми и текстовыми каналами.;</p>
-                                                                                        <p><span style="color:#e05656">@× Support</span>  - встречает новичков, и отвечает на вопросы.</p>
-                                                                                        <p><span style="color:#e7777a">@× Stuff</span> начальная роль модерации.</span></p>
+                                                                                        <p><span style="color:#d63638">@× Moderator</span> - модерация сервера , следит за голосовыми и текстовыми каналами.;</p>
+                                                                                        <p><span style="color:#e65054">@× Support</span>  - встречает новичков, и отвечает на вопросы.</p>
+                                                                                        <p><span style="color:#f86368">@× Stuff</span> начальная роль модерации.</span></p>
                                                                                         <p></p>
                                                                                         <h3>3.2 Модератор обязан быть общительным, грамотным, вежливым.</h3>
                                                                                         <h3>3.3 Модераторам запрещено игнорировать Администрациию без веской на то причины, а также Модератор обязан предоставить ролям выше его по иерархии, доказательство за наказание пользователя при возникновении вопросов.</h3>
