--- a/dx.html
+++ b/dx.html
@@ -45,9 +45,11 @@
 </head>
 
 <body>
-    <div class="navbar" id="respNav"> <a class="logo" href="index.html">Игровой <span>сервер</span></a>
-        <a href="https://discord.gg/JXQDKwMZYx" rel="nofollow noopener" target="_blank">Присоединиться</a>
-        <a href="rules.html">Правила</a><a class="icon" onclick="NavBar()">&#9776;</a>
+    <div class="navbar" id="respNav"> 
+        <a class="logo" href="index.html">Игровой <span>сервер</span></a>
+        <a href="https://discord.gg/pavel1031" rel="nofollow noopener" target="_blank">Присоединиться</a>
+        <a href="rules.html">Правила</a>
+        <a href="moderation.html">Модерация</a>
     </div>
     <div id="main">
         <div class="content">
