--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
 </head>
 
 <body>
-  <div class="navbar" id="respNav"> <a class="logo" href="index.html">Игровой <span>сервер</span></a><a
-      href="https://discord.gg/pavel1031" rel="nofollow noopener" target="_blank">Присоединиться</a> <a
-      href="rules.html">Правила</a><a class="icon" onclick="NavBar()">&#9776;</a></div>
+  <div class="navbar" id="respNav"> 
+      <a class="logo" href="index.html">Игровой <span>сервер</span></a>
+      <a href="https://discord.gg/pavel1031" rel="nofollow noopener" target="_blank">Присоединиться</a>
+      <a href="rules.html">Правила</a>
+      <a href="moderation.html">Модерация</a>
+    </div>
   <div id="main">
     <div class="content">
       <div class="main_baner">
