--- a/moderation.html
+++ b/moderation.html
@@ -60,17 +60,28 @@
                 </ul>
             </nav>
             <div class="neko_rules">
-                <h2>Навигация по ролям модерации.</h2>
+                <h1>Навигация по ролям модерации.</h1>
                 <p><span style="color:#691c1c">@× Administration</span> - является главной должностной ролью после <span style="color:#451313">@× Owner </span>. Занимается полностью всеми делами сервера.; </p>
                 <p><span style="color:#8a2424">@× Сontrol</span> - является заместителем и помощником администрации. Занимается только внутренними делами сервера.;</p>
                 <p><span style="color:#b32d2e">@× Curator</span> - контролирует ветку модерации, и редактирует систему наборов.;</p>
                 <p><span style="color:#b82628">@× Main Moderator</span> - является вышей должностью модерации, и обучает всех новоприбывших модераторов.;</p>
                 <p><span style="color:#d63638">@× Moderator</span> - присекает все нарушения участников.;</p>
                 <p><span style="color:#e65054">@× Support</span>  - встречает новичков, отвечает на вопросы, и передаёт нарушения должностям выше.</p>
-                <p><span style="color:#f86368">@× Stuff</span> - является стажёром, и в его обязанности входит проявления активности.</span></p>
+                <p><span style="color:#f86368">@× Stuff</span> - является стажёром, и в его обязанности входит проявления большой активности.</span></p>
 <p></p>
-<h3>Минимальный онлайн.</h3>
-<h2><span style="color:#f86368">@× Stuff</span> - 30 минут </h2>
+<h1>Минимальный недельный онлайн в голосовых каналах.</h1>
+<p><span style="color:#b82628">@× Main Moderator</span> - минимальный актив в голосовых каналах состовляет пять часов.</p>
+<p><span style="color:#d63638">@× Moderator</span> - минимальный актив в голосовых каналах состовляет девять часов. </p> 
+<p><span style="color:#e65054">@× Support</span> - минимальный актив в голосовых канал состовляет пятнадцать часов.</p>
+<p><span style="color:#f86368">@× Stuff</span> - минимальный актив в голосовых канал состовляет пятнадцать часов.</p>
+
+<h1>Требования для повышения.</h1>
+<p><span style="color:#f86368">@× Stuff</span> -> <span style="color:#e65054">@× Support</span> - минимальный срок нахождения будет состовлять один месяц. Нужно проявлять сильную активность, или выполнить задания.</p>
+<p><span style="color:#e65054">@× Support</span> -> <span style="color:#d63638">@× Moderator</span> - минимальнйы срок нахождения будет состовлять один месяц. Нужно проявлять сильную активность, или выполнить задания. Обязательно сдать правила сервера.</p>
+<p><span style="color:#d63638">@× Moderator</span> -> <span style="color:#b82628">@× Main Moderator</span> - минимальный срок нахождения будет состовлять один месяц. Нужно проявлять сильный актив.</p>
+<p><span style="color:#b82628">@× Main Moderator</span> -> <span style="color:#b32d2e">@× Curator</span> - минимальный срок нахождения будет состовлять два месяца. Нужно проявлять активность.</p>
+<p><span style="color:#b32d2e">@× Curator</span> -> <span style="color:#8a2424">@× Сontrol</span> - минимальный срок нахождения будет состовлять три месяца. Нужно проявлять сильную активность, и иметь доверие от лица администрации.</p>
+
 
  
  
