--- a/moderation.html
+++ b/moderation.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Правила Сервера — Игровой сервер</title>
+    <title>Модерация — Игровой сервер</title>
     <link rel="canonical" href="rules.html">
     <meta name="keywords"
         content="дискорд сервер, дискорд, павел, крумка, крутой сервер, сервер с играми , сервер для общения, игры">
