--- a/moderation.html
+++ b/moderation.html
@@ -82,8 +82,25 @@
 <p><span style="color:#b82628">@× Main Moderator</span> -> <span style="color:#b32d2e">@× Curator</span> - минимальный срок нахождения будет состовлять два месяца. Нужно проявлять активность.</p>
 <p><span style="color:#b32d2e">@× Curator</span> -> <span style="color:#8a2424">@× Сontrol</span> - минимальный срок нахождения будет состовлять три месяца. Нужно проявлять сильную активность, и иметь доверие от лица администрации.</p>
 
+<h1>Устав.</h1>.</h1>>
+<h3>М1.1 Модератор должен быть общительным, грамотным, вежливым.</p>
+<span>Наказание: при первом нарушение устное предупреждение, а при повтороном нарушении письменое предупреждение.</span>
+<h3>М1.2 Модераторам запрещено игнорировать Администрациию без веской на то причины.</p>
+<span>снятие.</span>
+<h3>М1.3 Модератор не может злоупотрелять своей должностью или использовать свои полномочия в пользу себя.</p>
+<span>Наказание: снятие.</span>
+<h3>М1.4 Модератору запрещено разглашать информацию, не предназначенную для пользователей.</p>
+<span>Наказание: снятие или варн</span>
+<h3>М1.5 Стажёру запрещено накручивать приглашения.</p>
+<span>Наказание: обнуление приглашений.</span>
 
- 
+
+<h1>Примечания.</h1>
+<h3>Если модератора снимут с поста, то он не может больше претендовать на восстановление в должности в дальнейшем.</h3>
+<p>Администрация в праве сделать исключение этого правила, если нарушение было незначительным.</p>
+<h3>При случае взлома аккаунта модератора, то вину несёт сам модератор.</h3>
+<h3>Модератор обязан предоставить ролям выше его по иерархии, доказательство за наказание пользователя при возникновении вопросов.</h3>
+
  
  
  
