--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="title_main">
         <h1>Игровой<a> сервер</a></h1> <span>Сервер для настоящих геймеров и тяночек , заходи мы тебя ждём)</span>
       </div>
-      <div class="title_btn"> <a href="https://discord.gg/pavel1031" rel="nofollow noopener"
+      <div class="title_btn"> <a href="https://discord.gg/hwqPTRaB4H" rel="nofollow noopener"
         target="_blank">Присоединиться к серверу</a> <a
         href="https://myservers.me/s/451300008088567808" target="_blank"
         onClick="like(this); return false;">Проголосовать за сервер</a> <a
