--- a/moderation.html
+++ b/moderation.html
@@ -93,6 +93,8 @@
 <span>Наказание: снятие или варн</span>
 <h3>М1.5 Стажёру запрещено накручивать приглашения.</p>
 <span>Наказание: обнуление приглашений.</span>
+<h3>М.1.6 Модератры обязаны присылать отчёты о нарушениях участников.</h3>
+<span>Наказание: на усмотрение администрации.</span>
 
 
 <h1>Примечания.</h1>
