--- a/moderation.html
+++ b/moderation.html
@@ -94,6 +94,7 @@
 <h3>М1.5 Стажёру запрещено накручивать приглашения.</p>
 <span>Наказание: обнуление приглашений.</span>
 <h3>М.1.6 Модератры обязаны присылать отчёты о нарушениях участников.</h3>
+<p>Исключение: голосовые каналы.</p>
 <span>Наказание: на усмотрение администрации.</span>
 
 
