--- a/rules.html
+++ b/rules.html
@@ -108,7 +108,8 @@
                                                                                     того как вас разбанил Павел (Любое
                                                                                     нарушение)</p><span>Наказание: Бан
                                                                                         без возможности разбана.</span>
-                                                                                        <p></p>
+            
+                <h3>3.2 Использовать аватарки с шокирующим и аморальными изображения.</p><span>Наказание: Просьба на смену аватарки или бан.</span>                                                                       <p></p>
 
             </div>
         </div>
