--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
       <a href="https://discord.gg/pavel1031" rel="nofollow noopener" target="_blank">Присоединиться</a>
       <a href="rules.html">Правила</a>
       <a href="moderation.html">Модерация</a>
+      <a href="fdfdfd.html">Новый дизайн</a>
+      a
     </div>
   <div id="main">
     <div class="content">
@@ -73,8 +75,7 @@
           rel="nofollow noopener" target="_blank">Discord Inc.</a></span>
     </div>
     <div class="footer-right">
-      <div class="footer-col"></div>
-      <div class="footer-col"></div>
+      <a href="https://mail.google.com/mail/u/0/?tab=rm#inbox?compose=new%22%3E">help.gamesserver@gmail.com</a>
     </div>
   </footer>
   <div id="scroll" class="scroll"> <img src="assets/img/arrow.svg" title="Scroll To Top" alt="Scroll To Top"
