--- a/moderation.html
+++ b/moderation.html
@@ -93,10 +93,11 @@
 <span>Наказание: снятие или варн</span>
 <h3>М1.5 Стажёру запрещено накручивать приглашения.</p>
 <span>Наказание: обнуление приглашений.</span>
-<h3>М.1.6 Модератры обязаны присылать отчёты о нарушениях участников.</h3>
+<h3>М.1.6 Модераторы обязаны присылать отчёты о нарушениях участников.</h3>
 <p>Исключение: голосовые каналы.</p>
 <span>Наказание: на усмотрение администрации.</span>
-
+<h3>М.1.7 Модератору запрещено нарушать правила сервера</h3>
+<span>Наказание: на усмотрение администрации.</span>
 
 <h1>Примечания.</h1>
 <h3>Если модератора снимут с поста, то он не может больше претендовать на восстановление в должности в дальнейшем.</h3>
