--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="ru-RU">
 
 <head>
+  
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5ZZ8B2G');</script>
+  <!-- End Google Tag Manager -->
   <title>Игровой сервер</title>
   <link rel="canonical" href="index.html">
   <meta name="keywords"
@@ -30,20 +38,16 @@
     content="Официальный Дискорд сервер для общения. Приятное комьюнити и хорошая атмосфера помогут тебе расслабиться." />
   <meta property="twitter:url" content="https://gamesserver.cf/index.html" />
   <meta property="twitter:image" content="!" />
-  <script>(function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-54GSWQB');</script>
   <link href="assets/css/main.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald">
   <script async src='cdn-cgi/bm/cv/669835187/api.js'></script>
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZZ8B2G"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div class="navbar" id="respNav"> 
       <a class="logo" href="index.html">Игровой <span>сервер</span></a>
       <a href="https://discord.gg/pavel1031" rel="nofollow noopener" target="_blank">Присоединиться</a>
