--- a/test.html
+++ b/test.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Test</title>
-    <link href="assets/css/style.css" rel="styleheet">
-</head>
-<body>
-    <div class="background-animation"></div>
-
-</body>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <link href="assets/css/main.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald">
+  <title>Игровой сервер</title>
+ </head>
+ <body>
+  <h1>Игровой сервер</h1>
+  <p>Сервер для настоящих геймеров и тяночек, заходи мы тебя ждём.</p>
+ </body>
 </html>
