--- a/rules.html
+++ b/rules.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5ZZ8B2G');</script>
+    <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Правила Сервера — Игровой сервер</title>
     <link rel="canonical" href="rules.html">
@@ -30,14 +37,6 @@
         content="Правила дискорд сервера. Заранее говорю, не пугайтесь такого большого кол-ва пунктов, если вы адекватный человек, то не нарушите их. А если всё же нарушите, то это явно не будет что-то серьёзное." />
     <meta property="twitter:url" content="#" />
     <meta property="twitter:image" content="#" />
-    <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-54GSWQB');</script>
     <link href="assets/css/main.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald">
     <script async src='cdn-cgi/bm/cv/669835187/api.js'>
@@ -45,11 +44,16 @@
 </head>
 
 <body>
-    <div class="navbar" id="respNav"> 
+    <div class="navbar" id="respNav">
+        <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZZ8B2G"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
         <a class="logo" href="index.html">Игровой <span>сервер</span></a>
         <a href="https://discord.gg/pavel1031" rel="nofollow noopener" target="_blank">Присоединиться</a>
         <a href="rules.html">Правила</a>
         <a href="moderation.html">Модерация</a>
+        <a href="fdfdfd.html">Новый дизайн</a>
     </div>
     <div id="main">
         <div class="content">
@@ -121,19 +125,12 @@
                     rel="nofollow noopener" target="_blank">Discord Inc.</a></span>
         </div>
         <div class="footer-right">
-            <div class="footer-col"></div>
-            <div class="footer-col"></div>
-        </div>
-    </footer>
-    <div id="scroll" class="scroll"> <img src="assets/img/arrow.svg" title="Scroll To Top" alt="Scroll To Top"
+            <a href="https://mail.google.com/mail/u/0/?tab=rm#inbox?compose=new%22%3E">help.gamesserver@gmail.com</a>
+          </div>
+        </footer>
+        <div id="scroll" class="scroll"> <img src="assets/img/arrow.svg" title="Scroll To Top" alt="Scroll To Top"
             loading="lazy" decoding="async"></div>
-    <script src="https://discordserver.info/like.js"></script>
-    <script src="assets/js/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/app.js"></script><noscript><iframe
-            src="https://www.googletagmanager.com/ns.html?id=GTM-54GSWQB" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
-    <script
-        type="text/javascript">(function () { window['__CF$cv$params'] = { r: '70e688a15f099721', m: 'U4.2ppF6FZlX.U45Tt6ID6037rzJJkx2HgX3vvW8Vvg-1653065031-0-AfQwgK5+AhflggGpkVKaYAOGlkNU0yVe29EuLtQeidGj/6l0yeR3XoAME2poHxHDD7Xkp1Zuj9r1oZH8/SnSaNaGbnEiNkJQ/rXclghuicIPeu3ubAAqe5EqwAe6FehdYA==', s: [0x4079fb2fa1, 0x179b85b155], } })();</script>
-</body>
-
-</html>
+        <script src="assets/js/jquery-3.5.1.min.js"></script>
+      </body>
+      
+      </html>
