--- a/rules.html
+++ b/rules.html
@@ -114,6 +114,7 @@
                                                                                         без возможности разбана.</span>
             
                 <h3>3.2 Использовать аватарки с шокирующим и аморальными изображения.</p><span>Наказание: Просьба на смену аватарки или бан.</span>                                                                       <p></p>
+                <h3>3.3 Это специальный тип блокировки, который характеризуется конфиденциальностью.</h3><span>Наказание: Бан</span>
 
             </div>
         </div>
