--- a/unban.html
+++ b/unban.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Таблица разбаненных пользователей</title>
+    <meta charset="UTF-8">
+    <title>Список разбаненных пользователей.</title>
+    <style>
+      table {
+        border-collapse: collapse;
+      }
+      th, td {
+        border: 1px solid black;
+        padding: 5px;
+      }
+      td.green {
+        background-color: lightgreen;
+      }
+    </style>
   </head>
   <body>
-    <h1>Таблица разбаненных пользователей</h1>
-    <table>
+    <h1>Список разбаненных пользователей.</h1>
+    
+    <table id="user-table">
       <thead>
         <tr>
           <th>Ник</th>
@@ -18,57 +31,57 @@
         <tr>
           <td>Delete#7026</td>
           <td>Не указана</td>
-          <td>Успешно</td>
+          <td class="green">Успешно</td>
         </tr>
         <tr>
           <td>dirtyy#5420</td>
           <td>2.3</td>
-          <td>Успешно</td>
+          <td class="green">Успешно</td>
         </tr>
         <tr>
           <td>fucker.of.seventh.graders#3322</td>
           <td>2.2</td>
-          <td>Успешно</td>
+          <td class="green">Успешно</td>
         </tr>
         <tr>
           <td>lovely#4426</td>
           <td>1.9</td>
-          <td>Успешно</td>
+          <td class="green">Успешно</td>
         </tr>
         <tr>
           <td>maga#4239</td>
           <td>даун</td>
-          <td>Успешно</td>
+          <td class="green">Успешно</td>
         </tr>
         <tr>
           <td>mefedron hui i lor#4729</td>
           <td>1.9</td>
-          <td>Успешно</td>
+          <td class="green">Успешно</td>
         </tr>
         <tr>
           <td>Okami#5871</td>
           <td>Не указана</td>
-          <td>Успешно</td>
+          <td class="green">Успешно</td>
         </tr>
         <tr>
           <td>top4ik#0851</td>
           <td>Не указана</td>
-          <td>Успешно</td>
+          <td class="green">Успешно</td>
         </tr>
         <tr>
           <td>дая#0199</td>
           <td>1.9</td>
-          <td>Успешно</td>
+          <td class="green">Успешно</td>
         </tr>
         <tr>
           <td>игор крит афишал#7777</td>
           <td>даун</td>
-          <td>Успешно</td>
+          <td class="green">Успешно</td>
         </tr>
         <tr>
           <td>рыька#3565</td>
           <td>Сам гей</td>
-          <td>Успешно</td>
+          <td class="green">Успешно</td>
         </tr>
       </tbody>
     </table>
