--- a/404.htm
+++ b/404.htm
@@ -31,11 +31,11 @@
 		<div class="notfound">
 			<div class="notfound-404">
 				<div></div>
-				<h1>301</h1>
+				<h1>404</h1>
 			</div>
-			<h2>Дата выхода 2025 год</h2>
-			<p>Из-за технических проблем мы вынуждены перенести запланированный дизайн на 2025 год.</p>
-			<a href="index.html">На главную страницу</a>
+			<h2>Страница не найдена</h2>
+			<p>Страница, которую вы ищете, возможно, была удалена из-за изменения ее названия или временно недоступна.</p>
+			<a href="index.htm">На главную страницу</a>
 		</div>
 	</div>
 
