--- a/moderation.htm
+++ b/moderation.htm
@@ -49,18 +49,18 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZZ8B2G"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-        <a class="logo" href="index.html">Игровой <span>сервер</span></a>
+        <a class="logo" href="index.htm">Игровой <span>сервер</span></a>
         <a href="https://discord.gg/pavel1031" rel="nofollow noopener" target="_blank">Присоединиться</a>
-        <a href="rules.html">Правила</a>
-        <a href="moderation.html">Модерация</a>
-        <a href="index_new.html">Новый дизайн</a>
+        <a href="rules.htm">Правила</a>
+        <a href="moderation.htm">Модерация</a>
+        <a href="index_new.htm">Новый дизайн</a>
       </div>
     <div id="main">
         <div class="content">
             <nav>
                 <ul class="breadcrumb">
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="moderation.html">Модерация</a></li>
+                    <li><a href="index.htm">Главная</a></li>
+                    <li><a href="moderation.htm">Модерация</a></li>
                 </ul>
             </nav>
             <div class="games_rules">
