--- a/index.htm
+++ b/index.htm
@@ -49,11 +49,11 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <div class="navbar" id="respNav"> 
-      <a class="logo" href="index.html">Игровой <span>сервер</span></a>
+      <a class="logo" href="index.htm">Игровой <span>сервер</span></a>
       <a href="https://discord.gg/pavel1031" rel="nofollow noopener" target="_blank">Присоединиться</a>
-      <a href="rules.html">Правила</a>
-      <a href="moderation.html">Модерация</a>
-      <a href="index_new.html">Новый дизайн</a>
+      <a href="rules.htm">Правила</a>
+      <a href="moderation.htm">Модерация</a>
+      <a href="index_new.htm">Новый дизайн</a>
     </div>
   <div id="main">
     <div class="content">
