--- a/index_new.htm
+++ b/index_new.htm
@@ -35,7 +35,7 @@
 			</div>
 			<h2>Дата выхода 2025 год</h2>
 			<p>Из-за технических проблем мы вынуждены перенести запланированный дизайн на 2025 год.</p>
-			<a href="index.htm">На главную страницу</a>
+			<a href="index.html">На главную страницу</a>
 		</div>
 	</div>
 
