--- a/moderation.html
+++ b/moderation.html
@@ -63,7 +63,7 @@
                     <li><a href="moderation.html">Модерация</a></li>
                 </ul>
             </nav>
-            <div class="games_rules">
+            <div class=neko_rules>
                 <h1>Навигация по ролям модерации.</h1>
                 <p><span style="color:#691c1c">@× Administration</span> - является главной должностной ролью после <span style="color:#451313">@× Owner </span>. Занимается полностью всеми делами сервера.; </p>
                 <p><span style="color:#8a2424">@× Сontrol</span> - является заместителем и помощником администрации. Занимается только внутренними делами сервера.;</p>
@@ -121,7 +121,7 @@
     <footer>
         <div class="footer-left">
             <div class="footer-logo"> <a class="logo" href="index.html">Игровой <span>сервер</span></a><span> © 2018 |
-                    v1.4.0</span> </div> <span>Мы не являемся аффилированным лицом компании <a href="https://discord.com"
+                    v1.4.1</span> </div> <span>Мы не являемся аффилированным лицом компании <a href="https://discord.com"
                     rel="nofollow noopener" target="_blank">Discord Inc.</a></span>
         </div>
         <div class="footer-right">
