--- a/rules.html
+++ b/rules.html
@@ -63,7 +63,7 @@
                     <li><a href="rules.html">Правила</a></li>
                 </ul>
             </nav>
-            <div class="games_rules">
+            <div class=neko_rules>
                 <h2>Примечания</h2>
                 <h3>1.1 Каждый пользователь который вступил в Discord сервер, автоматически соглашается с данным сводом правила сервера и платформы Discord</h3>
                 <h3>1.2 Администрация имеет право на редактирование данных правил в любое время суток.</h3>
@@ -122,7 +122,7 @@
     <footer>
         <div class="footer-left">
             <div class="footer-logo"> <a class="logo" href="index.html">Игровой <span>сервер</span></a><span> © 2018 |
-                    v1.4.0</span> </div> <span>Мы не являемся аффилированным лицом компании <a href="https://discord.com"
+                    v1.4.1</span> </div> <span>Мы не являемся аффилированным лицом компании <a href="https://discord.com"
                     rel="nofollow noopener" target="_blank">Discord Inc.</a></span>
         </div>
         <div class="footer-right">
