--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   <div id="main">
     <div class="content">
       <div class="main_baner">
-        <div class="games_background_left layer" data-speed="2"></div>
-        <div class="games_background_right layer" data-speed="2"></div>
+        <div class="neko_background_left layer" data-speed="2"></div>
+        <div class="neko_background_right layer" data-speed="2"></div>
       </div>
       <div class="title_main">
         <h1>Игровой<a> сервер</a></h1> <span>Сервер для настоящих геймеров и тяночек , заходи мы тебя ждём)</span>
@@ -73,7 +73,7 @@
   <footer class="footer">
     <div class="footer-left">
       <div class="footer-logo"> <a class="logo" href="index.html">Игровой <span>сервер</span></a><span> © 2018 |
-          v1.4.0</span> </div> <span>Мы не являемся аффилированным лицом компании <a href="https://discord.com"
+          v1.4.1</span> </div> <span>Мы не являемся аффилированным лицом компании <a href="https://discord.com"
           rel="nofollow noopener" target="_blank">Discord Inc.</a></span>
     </div>
   <div class="footer-right">
